data/derived/sp14/progs/unify/prog0467.ml.out
Characters 146-177:
  if (randNum = 1 && randNum2 = 3) then buildCosine(buildOp1(buildX())) else
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
